# sql-check

./: .mise.toml  Cargo.toml  README.md
.github/workflows/: _clippy.yml  _fmt.yml  _test.yml  ci.yml
crates/sql-check/: Cargo.toml
crates/sql-check-macros/: Cargo.toml
crates/sql-check-macros/src/: lib.rs
crates/sql-check-tests/: Cargo.toml  schema.sql
crates/sql-check-tests/src/: lib.rs
crates/sql-check-tests/tests/: compile_fail.rs  integration.rs
crates/sql-check-tests/tests/compile_fail/: insert_unknown_column.rs  insert_unknown_column.stderr  invalid_sql_syntax.rs  invalid_sql_syntax.stderr  unknown_column.rs  unknown_column.stderr  unknown_table.rs  unknown_table.stderr  unsupported_statement.rs  unsupported_statement.stderr  wrong_param_count.rs  wrong_param_count.stderr
crates/sql-check/src/: error.rs  lib.rs  runtime.rs  schema.rs  sqlx_runtime.rs  types.rs  validate.rs
examples/sample-app/: Cargo.toml
examples/sample-app/src/: main.rs
