[workspace]
resolver = "2"
members = [
    "crates/sql-check",
    "crates/sql-check-macros",
    "crates/sql-check-tests",
    # Temporarily exclude sample-app because SQLx needs a live database
    # "examples/sample-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Corey Alexander <coreyja@gmail.com>"]

[workspace.dependencies]
# SQL parsing
sqlparser = "0.60"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Proc macro support
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

# Error handling
thiserror = "2"

# Testing
pretty_assertions = "1"
