[package]
name = "sql-check"
version.workspace = true
edition.workspace = true
description = "Compile-time SQL query validation against a schema file"

[features]
default = []
runtime = ["tokio-postgres"]

[dependencies]
sqlparser.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-postgres = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
