[package]
name = "sample-app"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# SQLx - this is what we'll replace with sql-check
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid"] }

# UUID support
uuid = { version = "1", features = ["v4", "serde"] }
